--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -174,15 +174,17 @@ services:
     depends_on:
       minio:
         condition: service_healthy
-    entrypoint: ["/bin/sh","-lc"]
+    entrypoint:
+      - /bin/sh
+      - -lc
+      - |
+          mc alias set local http://minio:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD" \
+            && mc mb -p local/$S3_ARTIFACT_BUCKET || true \
+            && mc anonymous set download local/$S3_ARTIFACT_BUCKET || true
     environment:
       MINIO_ROOT_USER: "${MINIO_ROOT_USER}"
       MINIO_ROOT_PASSWORD: "${MINIO_ROOT_PASSWORD}"
       S3_ARTIFACT_BUCKET: "${S3_ARTIFACT_BUCKET}"
-    command: >
-      mc alias set local http://minio:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD" &&
-      mc mb -p local/$S3_ARTIFACT_BUCKET || true &&
-      mc anonymous set download local/$S3_ARTIFACT_BUCKET || true
     restart: "no"
 
 volumes:
