PSI Dag Debugged

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ AWS_SECRET_ACCESS_KEY=minioadmin
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 S3_ARTIFACT_BUCKET=mlflow
+MINIO_MODELS_BUCKET=models
+MINIO_REPORTS_BUCKET=reports
+MINIO_PREDICTIONS_BUCKET=predictions
 TZ=America/New_York
 PYTHONDONTWRITEBYTECODE=1
 PYTHONUNBUFFERED=1
