--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -1,10 +1,22 @@
 pandas
 numpy
 scikit-learn
+lightgbm
+xgboost
+catboost
+optuna
+optuna-integration[mlflow]
 mlflow
-boto3
 minio
-pyyaml
-great-expectations
-evidently
+boto3
 psycopg2-binary
+joblib
+shap
+evidently
+matplotlib
+seaborn
+weasyprint
+reportlab
+pyarrow
+html5lib
+tabulate
